--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkgrey;
+    background-color: black;
     color: white;
     font-family: "Montserrat", sans-serif;
 }
@@ -9,14 +9,21 @@ H* {
     color: white;
 }
 
-
+.opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
 /*  Navbar  */
 
 .navbar {
     margin-bottom: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, .25);
+    background-color: rgba(0, 0, 0, .75);
     border: 0;
 }
 
@@ -30,7 +37,7 @@ H* {
 
 .navbar .navbar-brand {
     font-family: "Kaushan Script", sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 500;
 }
 
@@ -41,10 +48,9 @@ H* {
     letter-spacing: 1.5px;
 }
 
-
 /*  footer  */
 footer {
-    background-color:  rgba(0, 0, 0, .25);
+    background-color:  #404040;
     padding-top: 15px;
 }
 
@@ -83,11 +89,21 @@ footer .copyright-text {
     -o-background-size: cover;
     background-size: cover;
  
-    padding-top: 30px;
-
     border-top: 0;
 }
 
 .jumbotron {
     background-color: transparent;
+    margin-left: 50px;
+    margin-top: 100px;
+}
+
+.jumbotron .lead {
+    width: 60%;
+    height: auto;
+    padding: 15px;
+
+    font-size: 18px;
+
+    background-color: rgba(0, 0, 0, .5);
 }
