--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,8 @@ footer .copyright-text {
 .card {
     background-color: #43474c;
     border-radius: 0;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .card img {
