--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,14 @@ H* {
     color: #fafafa
 }
 
+hr {
+    background-color: #43474c;
+    height: 6px;
+    width: 90%;
+    margin-top: 30px;
+
+    border-radius: 15px;
+}
 /*  Navbar  */
 
 .navbar {
@@ -54,7 +62,7 @@ H* {
 .navbar .navbar-nav a {
     font-size: 20px;
     font-weight: 500;
-    margin-right: 50px;
+    margin-right: 30px;
     letter-spacing: 1.5px;
 }
 
@@ -62,6 +70,7 @@ H* {
 footer {
     background-color: #43474c;
     padding-top: 15px;
+    margin-top: 15px;
 }
 
 footer a {
@@ -80,51 +89,78 @@ footer a {
 
 footer a:hover {
     color: #fafafa;
-    background-color: #1f1f1f;
+    background-color: #05c1fb;
 }
+/*  jumbotron  */
 
-footer .copyright-text {
-    margin-top: 30px;
-}
+.jumbotron-container {
+    height: 100vh;
 
-
-/* Jumbotron/callout  */
-
-.jumbotron-background {
-    height: 80vh;
-
-    background: url('../images/pexels-mylo-kaye-6585361.jpg') no-repeat bottom right fixed;
+    background: url('../images/index/Jumbotron-Background.jpg') no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 
-    border-top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
 }
 
 .jumbotron {
     background-color: transparent;
-    margin-left: 50px;
-    margin-top: 100px;
+}
+
+.jumbotron h1 {
+    font-size: 40px;
+    color: #fafafa;
+    font-weight: bold;
+}
+
+.jumbotron hr {
+    height: 2px;
+    width: 100%;
+    background-color: #fafafa;
+
 }
 
 .jumbotron .lead {
     width: 60%;
-    height: auto;
+    margin-top: 30px;
     padding: 15px;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, .6);
+}
 
-    font-size: 18px;
+.scroll-icon-container {
+    margin-top: 100px;
+}
 
-    background-color: rgba(0, 0, 0, .5);
+.scroll-icon {
+    font-size: 50px;
+    color: rgba(178, 178, 178, 0.8)
+}
+
+.scroll-icon :hover {
+    color: #05c1fb; 
 }
 
 /*  Info Cards  */
 
 .card {
-    background-color: #43474c;
-    border-radius: 0;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 30px;
     margin-bottom: 30px;
+    width: auto;
+
+    padding: 15px;
+
+    background-color: #43474c;
+    border-radius: 15px;
+ 
 }
 
 .card img {
@@ -132,4 +168,27 @@ footer .copyright-text {
     height: 400px;
     object-fit: cover;
     object-position: center;
+
+    border-radius: 15px;
 }
+
+
+
+
+
+
+
+/* media queries */
+
+@media screen and (max-width: 600px) {
+    .jumbotron .lead {
+        width: 100%;
+        font-size: 16px;
+    }
+    .jumbotron {
+        margin-top: 100px;
+    }
+    .jumbotron h1 {
+        font-size: 30px;
+    }
+  }
