--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ hr {
     color: #94a1b2;
 }
 
+.latest-card p{
+    color:#fafafa;
+   }
+
 /*  General Rules  */
 
 body {
@@ -157,8 +161,7 @@ footer {
 
 .latest-jumbotron-background {
     height: 70vh;
-    background: url('../images/latest/Jumbotron-background.jpg') no-repeat bottom right fixed;
-    background-position: 0px -150px;
+    background: url('../images/latest/latest-Jumbotron-background.jpg') no-repeat bottom right fixed;
 }
 
 .jumbotron-container {
@@ -166,6 +169,8 @@ footer {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    background-position: center;
 
     position: relative;
 }
@@ -200,9 +205,9 @@ footer {
     font-size: 50px;
 }
 
-/*  Info Cards  */
+/*  Cards  */
 
-.card {
+.index-card {
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 30px;
@@ -211,10 +216,10 @@ footer {
 
     padding: 15px;
 
-    border-radius: 15px;    
+    border-radius: 15px;  
 }
 
-.card img {
+.index-card img {
     width: 100%;
     height: 400px;
     object-fit: cover;
@@ -222,6 +227,26 @@ footer {
 
     border-radius: 15px;
 }
+
+.latest-card {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: auto;
+
+    border-radius: 15px;  
+}
+
+.latest-card p {
+    margin-top: ;
+}
+
+.latest-card details {
+
+}
+
+
 
 
 /* media queries */
@@ -237,7 +262,7 @@ footer {
     .jumbotron h1 {
         font-size: 30px;
     }
-    .card img {
+    .index-card img {
         height: 300px;
     }
   }
