--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     color: #fafafa;
 }
 
-H* {
+h1, h2, h3, h4, h5, h6 {
     color: #fafafa;
 }
 
@@ -48,10 +48,6 @@ hr {
     background-color: #fafafa;
 }
 
-.jumbotron .lead {
-    background-color: rgba(0, 0, 0, .6);
-}
-
 .scroll-icon {
     color: rgba(178, 178, 178, 0.8)
 }
@@ -78,8 +74,8 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-H* {
-    font-family: "Raleway", sans-serif;
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Spartan", sans-serif;
 }
 
 .opaque-overlay {
@@ -88,7 +84,7 @@ H* {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 hr {
@@ -96,7 +92,7 @@ hr {
     width: 90%;
     margin-top: 30px;
 
-    border-radius: 15px;
+    border-radius: 12px;
 }
 
  .social-links a {
@@ -112,8 +108,9 @@ hr {
     text-decoration: none;
 }
 
-.socials-text {
-    font-size: 20px;
+
+.blue-btn {
+    border-radius: 5px;
 }
 
 /*  Navbar  */
@@ -133,9 +130,10 @@ hr {
 }
 
 .navbar .navbar-brand {
-    font-family: "Kaushan Script", sans-serif;
+    font-family: "Spartan", sans-serif;
     font-size: 30px;
     font-weight: 500;
+    letter-spacing: 1.5px;
 }
 
 .navbar .navbar-nav a {
@@ -182,19 +180,18 @@ footer {
 
 .jumbotron h1 {
     font-size: 40px;
-    font-weight: bold;
 }
 
 .jumbotron hr {
     height: 2px;
     width: 100%;
+    margin-bottom: 30px;
 }
 
 .jumbotron .lead {
     width: 60%;
     margin-top: 30px;
     padding: 15px;
-    border-radius: 15px;
 }
 
 .scroll-icon-container {
@@ -214,9 +211,9 @@ footer {
     margin-bottom: 30px;
     width: auto;
 
-    padding: 15px;
+    padding: 20px;
 
-    border-radius: 15px;  
+    border-radius: 9px;  
 }
 
 .index-card img {
@@ -225,26 +222,57 @@ footer {
     object-fit: cover;
     object-position: center;
 
-    border-radius: 15px;
+    border-radius: 9px;
 }
 
-.latest-card {
-    margin-left: 10%;
-    margin-right: 10%;
+.latest-card .card-img-overlay, .latest-card .card-img{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.latest-card-small {
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     width: auto;
 
-    border-radius: 15px;  
+    border-radius: 9px;  
 }
 
-.latest-card p {
-    margin-top: ;
+.latest-card-small .card-img-overlay, .latest-card-small .card-img{
+    height: 600px;
 }
 
-.latest-card details {
 
+.latest-card-large {
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 30px;
+    margin-bottom: 0px;
+    width: auto;
+
+    border-radius: 9px; 
 }
+
+.latest-card-large .card-img-overlay, .latest-card-large .card-img{
+    height: 700px;
+}
+
+.card-text-bg {
+    display:block;
+    background-color:  rgba(0, 0, 0, .5);
+    border-radius: 9px;
+    padding: 5px;
+}
+
+
+.card-text-bg summary:hover {
+    color: #05c1fb;
+}
+
 
 
 
@@ -252,6 +280,9 @@ footer {
 /* media queries */
 
 @media screen and (max-width: 600px) {
+    .navbar .navbar-brand {
+        font-size: 20px;
+    }
     .jumbotron .lead {
         width: 100%;
         font-size: 16px;
@@ -262,7 +293,17 @@ footer {
     .jumbotron h1 {
         font-size: 30px;
     }
+    .jumbotron h3 {
+       font-size: 20px;
+    }
     .index-card img {
         height: 300px;
+    }
+    .latest-card h3{
+        font-size: 20px;
+    }
+    .latest-card-large {
+        margin-left: 5%;
+        margin-right: 5%;
     }
   }
