--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
 /*  colors  */
 body {
-    background-color:  #16161a;
+    background-color: #16161a;
     color: #fafafa;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #fafafa;
 }
 
@@ -53,7 +58,7 @@ hr {
 }
 
 .scroll-icon :hover {
-    color: #05c1fb; 
+    color: #05c1fb;
 }
 
 .card {
@@ -64,9 +69,13 @@ hr {
     color: #94a1b2;
 }
 
-.latest-card p{
-    color:#fafafa;
-   }
+.latest-card p {
+    color: #fafafa;
+}
+
+.gallery-container hr {
+    background-color: #fafafa
+}
 
 /*  General Rules  */
 
@@ -74,7 +83,12 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Spartan", sans-serif;
 }
 
@@ -95,7 +109,11 @@ hr {
     border-radius: 12px;
 }
 
- .social-links a {
+.no-padding {
+    padding: 0 !important;
+}
+
+.social-links a {
     font-size: 25px;
     margin-right: 10px;
     height: 50px;
@@ -152,7 +170,7 @@ footer {
 
 /*  jumbotron  */
 
-.index-jumbotron-background{
+.index-jumbotron-background {
     height: 100vh;
     background: url('../images/index/Jumbotron-Background.jpg') no-repeat bottom right fixed;
 }
@@ -204,16 +222,19 @@ footer {
 
 /*  Cards  */
 
-.index-card {
+.card-container {
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     width: auto;
 
-    padding: 20px;
+    border-radius: 9px;
+}
 
-    border-radius: 9px;  
+.index-card {
+    margin-bottom: 30px;
+    padding: 20px;
 }
 
 .index-card img {
@@ -225,45 +246,27 @@ footer {
     border-radius: 9px;
 }
 
-.latest-card .card-img-overlay, .latest-card .card-img{
+.latest-card .card-img-overlay,
+.latest-card .card-img {
     width: 100%;
     height: 600px;
     object-fit: cover;
     object-position: center;
 }
 
-.latest-card-small {
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 30px;
-    margin-bottom: 0px;
-    width: auto;
-
-    border-radius: 9px;  
-}
-
-.latest-card-small .card-img-overlay, .latest-card-small .card-img{
+.latest-card-small .card-img-overlay,
+.latest-card-small .card-img {
     height: 600px;
 }
 
-
-.latest-card-large {
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    margin-top: 30px;
-    margin-bottom: 0px;
-    width: auto;
-
-    border-radius: 9px; 
-}
-
-.latest-card-large .card-img-overlay, .latest-card-large .card-img{
+.latest-card-large .card-img-overlay,
+.latest-card-large .card-img {
     height: 700px;
 }
 
 .card-text-bg {
-    display:block;
-    background-color:  rgba(0, 0, 0, .5);
+    display: block;
+    background-color: rgba(0, 0, 0, .5);
     border-radius: 9px;
     padding: 9px;
 }
@@ -271,6 +274,37 @@ footer {
 
 .card-text-bg summary:hover {
     color: #05c1fb;
+}
+
+/*  Gallery  */
+.gallery-link {
+    padding-top: 1px;
+}
+
+.gallery-container {
+    margin-top: 70px;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: auto;
+}
+
+.gallery-container h2 {
+    font-size: 40px;
+}
+
+.gallery-container hr {
+    margin-top: 0;
+    margin-bottom: 30px;
+    width: 100%;
+}
+
+.gallery-container img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    object-position: center;
+
+    border-radius: 9px;
 }
 
 
@@ -283,30 +317,44 @@ footer {
     .navbar .navbar-brand {
         font-size: 20px;
     }
+
     .jumbotron .lead {
         width: 100%;
         font-size: 16px;
     }
+
     .jumbotron {
         margin-top: 100px;
     }
+
     .jumbotron h1 {
         font-size: 30px;
     }
+
     .jumbotron h3 {
-       font-size: 20px;
+        font-size: 20px;
     }
+
     .index-card img {
         height: 300px;
     }
-    .latest-card h3{
+
+    .latest-card h3 {
         font-size: 20px;
     }
-    .latest-card-large {
-        margin-left: 5%;
-        margin-right: 5%;
+
+    .latest-card-small {
+        margin-top: 30px;
     }
-    .latest-card-large .card-img-overlay, .latest-card-large .card-img {
+
+    .latest-card-large .card-img-overlay,
+    .latest-card-large .card-img {
         height: 600px;
     }
-  }
+}
+
+@media screen and (max-width: 768px) {
+    .latest-card-small {
+        margin-top: 30px;
+    }
+}
