--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,12 +277,9 @@ footer {
 }
 
 /*  Gallery  */
-.gallery-link {
-    padding-top: 1px;
-}
 
 .gallery-container {
-    margin-top: 70px;
+    padding-top: 80px;
     margin-left: 5%;
     margin-right: 5%;
     width: auto;
@@ -296,6 +293,7 @@ footer {
     margin-top: 0;
     margin-bottom: 30px;
     width: 100%;
+    height: 2px;
 }
 
 .gallery-container img {
@@ -351,10 +349,17 @@ footer {
     .latest-card-large .card-img {
         height: 600px;
     }
+
+    .gallery-container h2 {
+        font-size: 30px;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .latest-card-small {
         margin-top: 30px;
+    }
+    .gallery-container img {
+        height: 300px;
     }
 }
