--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,6 @@ hr {
     height: 6px;
     width: 90%;
     margin-top: 30px;
-
     border-radius: 12px;
 }
 
@@ -335,8 +334,8 @@ footer {
 }
 
 .about-container img {
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     border-radius: 50%;
 
     object-fit: cover;
@@ -346,7 +345,7 @@ footer {
 /*  Enquire  */
 
 .enquire-container {
-    padding-top: 80px;
+    padding-top: 30px;
     margin-left: 5%;
     margin-right: 5%;
     width: auto;
@@ -359,6 +358,15 @@ footer {
     height: 2px;
 }
 
+.enquire-container form {
+background-color: rgba(0, 0, 0, .25);
+padding: 20px;
+border-radius: 9px;
+}
+
+.enquire-container label {
+    margin-top: 20px;
+}
 
 
 
