--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,6 @@ hr {
 .blue-btn:hover {
     background-color: #047ea3;
     color: #fafafa;
-    box-shadow: 1px 1px 7px white;
 }
 
 .social-links a {
@@ -46,7 +45,6 @@ hr {
 .social-links a:hover {
     color: #fafafa;
     background-color: #05c1fb;
-    box-shadow: 0px 0px 7px white;
 }
 
 .jumbotron h1 {
@@ -380,6 +378,41 @@ border-radius: 9px;
     font-size: 20px;
 }
 
+
+/*  Transitions  */
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+  .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+  .hvr-sink {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-sink:hover, .hvr-sink:focus, .hvr-sink:active {
+    -webkit-transform: translateY(8px);
+    transform: translateY(8px);
+  }
 
 /* media queries */
 
