--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,10 @@ hr {
 
 /*  General Rules  */
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
 }
@@ -129,7 +133,7 @@ hr {
 
 .social-links a {
     font-size: 25px;
-    margin-right: 10px;
+    margin-right: 15px;
     height: 50px;
     width: 50px;
     padding: 7px;
@@ -228,6 +232,7 @@ footer {
 
 .scroll-icon-container {
     margin-top: 100px;
+    
 }
 
 .scroll-icon {
@@ -309,7 +314,7 @@ footer {
 
 .gallery-container hr {
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     width: 100%;
     height: 2px;
 }
@@ -393,8 +398,8 @@ border-radius: 9px;
     transition-property: transform;
   }
   .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
   }
   .hvr-sink {
     display: inline-block;
@@ -414,6 +419,22 @@ border-radius: 9px;
     transform: translateY(8px);
   }
 
+  .hvr-grow-img {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+  .hvr-grow-img:hover, .hvr-grow-img:focus, .hvr-grow-img:active {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    position: absolute;
+    z-index: 1;
+  }
 /* media queries */
 
 @media screen and (max-width: 600px) {
@@ -458,6 +479,7 @@ border-radius: 9px;
     .gallery-container h2 {
         font-size: 30px;
     }
+
     .about-container h1 {
         font-size: 30px; 
     }
