--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ h6 {
 }
 
 .navbar {
-    background-image: linear-gradient(0deg,rgba(0,0,0,0) 0%, rgba(0,0,0,0.75) 65%);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 65%);
 }
 
 
@@ -64,7 +64,7 @@ hr {
 }
 
 .card {
-    background-color:rgba(0,0,0,0.25);
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .card p {
@@ -232,7 +232,7 @@ footer {
 
 .scroll-icon-container {
     margin-top: 100px;
-    
+
 }
 
 .scroll-icon {
@@ -244,10 +244,7 @@ footer {
 .card-container {
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 30px;
-    margin-bottom: 0px;
     width: auto;
-
     border-radius: 9px;
 }
 
@@ -265,8 +262,11 @@ footer {
     border-radius: 5px;
 }
 
-.latest-card-small, .latest-card-large {
+.latest-card-small,
+.latest-card-large {
     background-color: transparent;
+    padding: 10px;
+    border: none;
 }
 
 .latest-card .card-img-overlay,
@@ -275,6 +275,7 @@ footer {
     height: 600px;
     object-fit: cover;
     object-position: center;
+    border-radius: 9px;
 }
 
 .latest-card-small .card-img-overlay,
@@ -314,7 +315,7 @@ footer {
 
 .gallery-container hr {
     margin-top: 0;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     width: 100%;
     height: 2px;
 }
@@ -324,8 +325,8 @@ footer {
     height: 500px;
     object-fit: cover;
     object-position: center;
-
-    border-radius: 9px;
+    border-radius: 19px;
+    padding: 10px;
 }
 
 /*  About  */
@@ -370,9 +371,9 @@ footer {
 }
 
 .enquire-container form {
-background-color: rgba(0, 0, 0, .25);
-padding: 20px;
-border-radius: 9px;
+    background-color: rgba(0, 0, 0, .25);
+    padding: 20px;
+    border-radius: 9px;
 }
 
 .enquire-container label {
@@ -396,12 +397,16 @@ border-radius: 9px;
     transition-duration: 0.3s;
     -webkit-transition-property: transform;
     transition-property: transform;
-  }
-  .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
-  }
-  .hvr-sink {
+}
+
+.hvr-sink {
     display: inline-block;
     vertical-align: middle;
     -webkit-transform: perspective(1px) translateZ(0);
@@ -413,13 +418,16 @@ border-radius: 9px;
     transition-property: transform;
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out;
-  }
-  .hvr-sink:hover, .hvr-sink:focus, .hvr-sink:active {
+}
+
+.hvr-sink:hover,
+.hvr-sink:focus,
+.hvr-sink:active {
     -webkit-transform: translateY(8px);
     transform: translateY(8px);
-  }
+}
 
-  .hvr-grow-img {
+.hvr-grow-img {
     display: inline-block;
     vertical-align: middle;
     -webkit-transform: perspective(1px) translateZ(0);
@@ -428,13 +436,17 @@ border-radius: 9px;
     transition-duration: 0.3s;
     -webkit-transition-property: transform;
     transition-property: transform;
-  }
-  .hvr-grow-img:hover, .hvr-grow-img:focus, .hvr-grow-img:active {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-    position: absolute;
+}
+
+.hvr-grow-img:hover,
+.hvr-grow-img:focus,
+.hvr-grow-img:active {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    position: relative;
     z-index: 1;
-  }
+}
+
 /* media queries */
 
 @media screen and (max-width: 600px) {
@@ -481,10 +493,17 @@ border-radius: 9px;
     }
 
     .about-container h1 {
-        font-size: 30px; 
+        font-size: 30px;
     }
+
     .enquire-container h1 {
         font-size: 30px;
+    }
+
+    .hvr-grow-img:hover,
+    .hvr-grow-img:focus,
+    .hvr-grow-img:active {
+       
     }
 }
 
@@ -492,6 +511,7 @@ border-radius: 9px;
     .latest-card-small {
         margin-top: 30px;
     }
+
     .gallery-container img {
         height: 300px;
     }
