--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,7 +328,7 @@ footer {
 
 .gallery-container img {
     width: 100%;
-    height: 500px;
+    height: 100%;
     object-fit: cover;
     object-position: center;
     border-radius: 19px;
@@ -468,11 +468,7 @@ footer {
     .latest-card-small {
         margin-top: 30px;
     }
-
-    .gallery-container img {
-        height: 300px;
-    }
-
+    
     .enquire-container .text-input {
         width: 50%;
     }
