--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,7 +468,7 @@ footer {
     .latest-card-small {
         margin-top: 30px;
     }
-    
+
     .enquire-container .text-input {
         width: 50%;
     }
@@ -479,6 +479,10 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
+    .navbar {
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
     .navbar .navbar-brand {
         font-size: 15px;
     }
